@@ -1,2 +1,6 @@
 <objects attr-sync="on">
+  <object type="MonoDevelop.AssemblyBrowser.AssemblyBrowserWidget" palette-category="MonoDevelop.AssemblyBrowser" allow-children="false" base-type="Gtk.Bin">
+    <itemgroups />
+    <signals />
+  </object>
 </objects>
